Ingress/Ingress-ctr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingressctrdep
spec:
  selector:
    matchLabels:
      app: ingressctrdepapp
  template:
    metadata:
      labels:
        app: ingressctrdepapp
    spec:
      serviceAccountName: nginx-ingress
      containers:
      - name: ingressctrpod
        image: nginx/nginx-ingress:edge
        ports:
        - containerPort: 80
        args:
          - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
          - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
