Ingress/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport
spec:
  type: NodePort
  selector:
    app: ingressctrdepapp
  ports:
  - port: 80
    targetPort: 80
