Ingress/ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /tea
        backend:
          serviceName: teasvc
          servicePort: 80
      - path: /coffe
        backend:
          serviceName: coffesvc
          servicePort: 80
